refactor(client): builders accept Transport<R> natively, ArkRecorder uses decorator chain symmetrically
ArkClient.Builder.transport() signature widens from HttpTransport to
Transport<RawResponse>. HttpTransport extends Transport<RawResponse> so
existing callers (Spring auto-config, user code) keep compiling without
changes. New code can pass a decorator-chain result directly:
    jdkTransport.with(Retry.of(policy, new SyncRetryOps()))
ArkClient and DefaultClientRequest field/constructor types follow suit.

AsyncArkClient.Builder gains an overload that accepts
Transport<CompletableFuture<RawResponse>> alongside the existing
AsyncHttpTransport variant. The AsyncHttpTransport overload now wraps
internally via Adapters.fromAsync so the client stores the unified
Transport type. AsyncArkClient and DefaultAsyncClientRequest migrate
their field type accordingly; DefaultAsyncClientRequest's send/sendBinary
calls go through the Transport interface methods instead of the legacy
sendAsync/sendBinaryAsync.

ArkRecorder (Quarkus) drops the Adapters.toAsync round-trip in the async
path and the RetryTransport wrapper in the sync path. Both paths now read:
    jdk.with(Retry.of(policy, new SyncRetryOps()))           // sync
    Adapters.fromAsync(jdk).with(Retry.of(policy, new AsyncRetryOps())) // async
A single, consistent decorator-chain shape across both execution models.

DefaultAsyncClientRequestTest wraps its AsyncHttpTransport mock via
Adapters.fromAsync where the request constructor expects the unified
type. Test outcomes unchanged.

This completes the Option E unification — both sync and async paths
expose the same composable decorator API in production wiring, with the
deprecated RetryTransport / RetryAsyncTransport wrappers kept only for
snapshot consumers' migration cycle.